--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -26,9 +26,9 @@ jobs:
       - name: Install Newman
         run: npm install -g newman
 
-      # 運行 API 測試
-      - name: Run API Tests
-        run: newman run api-tests.json
+      # # 運行 API 測試
+      # - name: Run API Tests
+      #   run: newman run api-tests.json
 
       # 安裝 Chrome 和 WebDriver（Selenium 需要）
       - name: Install Chrome and Chromedriver
