--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -9,19 +9,19 @@ on:
       - main
 
 jobs:
-  # api_tests:
-  #   name: API Testing
-  #   runs-on: ubuntu-latest
+  api_tests:
+     name: API Testing
+     runs-on: ubuntu-latest
 
-  #   steps:
-  #     - name: Checkout repository
-  #       uses: actions/checkout@v3
+     steps:
+       - name: Checkout repository
+         uses: actions/checkout@v3
 
-  #     - name: Install Newman
-  #       run: npm install -g newman
+       - name: Install Newman
+         run: npm install -g newman
 
-  #     - name: Run API Tests
-  #       run: newman run api-tests.json
+       - name: Run API Tests
+         run: newman run APITesting.postman_collection.json
 
   ui_tests:
     name: UI Testing
